# bittensor

./: .dockerignore  .gitignore  INSTALL.md  LICENSE  Makefile  README.md
.github/workflows/: linter.yml
backend/: .isort.cfg
backend/app_envs/: django.env.example  postgres.env.example
backend/core/: .flake8  Dockerfile  entrypoint.sh  manage.py  pyproject.toml
backend/core/api/base/: mixins.py  permissions.py  urls.py  viewsets.py
backend/core/api/v1/: urls.py
backend/core/api/v1/auth_users/: handlers.py  routers.py  urls.py
backend/core/api/v1/chats/: handlers.py  routers.py  serializers.py  services.py  urls.py
backend/core/api/v1/chats/serializers/: answer.py  chat.py  question.py
backend/core/api/v1/subnets/: handlers.py  routers.py  serializers.py  urls.py
backend/core/apps/auth_users/: models.py
backend/core/apps/auth_users/admin/: admin.py
backend/core/apps/auth_users/migrations/: 0001_initial.py
backend/core/apps/chats/: models.py  services.py
backend/core/apps/chats/admin/: __init__.py  admin.py
backend/core/apps/chats/migrations/: 0001_initial.py
backend/core/apps/subnets/: apps.py  models.py
backend/core/apps/subnets/admin/: admin.py
backend/core/apps/subnets/migrations/: 0001_initial.py  0002_subnet_slug.py  0003_subnet_is_active_subnet_openai_model.py
backend/core/bittensor/: asgi.py  settings.py  urls.py  wsgi.py
docker_compose/: docker-compose.dev.yaml  docker-compose.yaml
frontend/: .env.example  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json  store.ts
frontend/composables/: useApi.ts
(+26 files in other folders)
