[tool.poetry]
name = "bittensor"
version = "0.1.0"
description = ""
authors = ["Undefined"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "^5.1.4"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
django-environ = "^0.11.2"
drf-spectacular = {extras = ["sidecar"], version = "^0.28.0"}
django-cors-headers = "^4.6.0"
djangorestframework-simplejwt = "^5.3.1"
gunicorn = "^23.0.0"
requests = "^2.32.3"
isort = "^5.13.2"
openai = "^1.58.1"
djoser = "^2.3.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"


[tool.poetry.group.linters.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
